--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -1,40 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
+            android:elevation="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <ImageView
+            <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_dialog"
-                    android:id="@+id/ivPic"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-            />
+                    android:layout_height="250dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ivPic">
+
+                <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp" app:srcCompat="@drawable/no_image_available"
+                        android:id="@+id/ivPicc"
+                        android:contentDescription="@string/desc"
+                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:scaleType="centerCrop"/>
+                <android.support.constraint.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:background="#AA000000" android:id="@+id/darkenBG">
+
+                    <TextView
+                            android:text=""
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/tvPicDesc"
+                            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                            android:textColor="@android:color/background_light"/>
+                </android.support.constraint.ConstraintLayout>
+            </android.support.constraint.ConstraintLayout>
             <TextView
-                    android:text="TextView"
+                    android:text=""
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" android:id="@+id/tvTitle"
-                    app:layout_constraintTop_toBottomOf="@+id/ivPic" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp" android:textStyle="bold"/>
+                    app:layout_constraintStart_toStartOf="@+id/tvDate"
+                    app:layout_constraintEnd_toEndOf="@+id/tvDate"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/tvDate" android:layout_marginTop="8dp"
+                    android:singleLine="true"/>
             <TextView
-                    android:text="TextView"
+                    android:text=""
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" android:id="@+id/tvDesc"
+                    android:layout_height="wrap_content" android:id="@+id/tvRubric"
                     app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                     app:layout_constraintStart_toStartOf="@+id/tvTitle"
                     app:layout_constraintEnd_toEndOf="@+id/tvTitle" android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:singleLine="true"/>
+            <TextView
+                    android:text=""
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvDesc"
+                    app:layout_constraintTop_toBottomOf="@+id/tvRubric" android:layout_marginTop="8dp"
+                    app:layout_constraintStart_toStartOf="@+id/tvRubric" app:layout_constraintEnd_toEndOf="@+id/tvRubric"/>
+            <TextView
+                    android:text=""
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvDate" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/ivPic" android:singleLine="true"/>
+            <CheckBox
+                    android:text="@string/notification"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/checkBox"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/tvRubric"
+                    app:layout_constraintTop_toBottomOf="@+id/tvDesc" android:layout_marginTop="8dp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
