--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -9,8 +9,8 @@
             android:layout_height="wrap_content"
             android:elevation="15dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -55,7 +55,7 @@
                     app:layout_constraintEnd_toEndOf="@+id/tvDate"
                     android:textStyle="bold"
                     app:layout_constraintTop_toBottomOf="@+id/tvDate" android:layout_marginTop="8dp"
-                    android:singleLine="true"/>
+            />
             <TextView
                     android:text=""
                     android:layout_width="0dp"
@@ -70,7 +70,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/tvDesc"
                     app:layout_constraintTop_toBottomOf="@+id/tvRubric" android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toStartOf="@+id/tvRubric" app:layout_constraintEnd_toEndOf="@+id/tvRubric"/>
+                    app:layout_constraintStart_toStartOf="@+id/tvRubric"
+                    app:layout_constraintEnd_toEndOf="@+id/tvRubric"/>
             <TextView
                     android:text=""
                     android:layout_width="0dp"
